# ece-auth-reverse-cuthill-mckee

./: CMakeLists.txt  LICENSE  README.md  main.c  main_openmp.c  main_sequential.c  main_sequential_v2.c  sort.c  sort.h
